--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser": "~11.1.0-next.0",
     "@angular/platform-browser-dynamic": "~11.1.0-next.0",
     "@angular/router": "~11.1.0-next.0",
+    "@ng-idle/core": "^10.0.0-beta.1",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^10.13.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
